--- a/index.css
+++ b/index.css
@@ -85,6 +85,25 @@
     width: 200px;
     height: 200px;
   }
+
+  .pokemon-details .shiny-button{
+    display: flex;
+    background-color: gold;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 5px 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -10px;
+    margin-bottom: 10px;
+  }
+
+  .shiny-button:hover{
+    background-color: orange;
+  }
   
   .pokemon-details h2 {
     font-size: 1.5em;
@@ -115,3 +134,17 @@
   .evolution-stage p {
     font-size: 1.1em;
   }
+
+  /* .shiny-button{
+    background-color: gold;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 5px 10px;
+  }
+
+  .shiny-button:hover{
+    background-color: orange;
+  } */
