--- a/index.css
+++ b/index.css
@@ -1,141 +1,168 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f5f5f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .pokedex-container {
-    background-color: #d32f2f;
-    width: 400px;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    color: white;
-  }
-  
-  .title {
-    font-size: 2em;
-    margin-bottom: 20px;
-  }
-  
-  .search-bar {
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: row;
-  }
-  
-  #pokemonName {
-    width: 70%;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    outline: none;
-  }
-  
-  #search-button {
-    padding: 10px;
-    border: none;
-    background-color: teal;
-    color: white;
-    font-weight: bold;
-    border-radius: 10px;
-    cursor: pointer;
-    margin-left: 10px;
-  }
-  
-  #search-button:hover {
-    background-color: darkgreen;
-    color: white;
-  }
-  
-  #random-button {
-    padding: 10px;
-    border: none;
-    background-color: orange;
-    color: white;
-    font-weight: bold;
-    border-radius: 10px;
-    cursor: pointer;
-    margin-left: 10px;
-  }
-  
-  #random-button:hover {
-    background-color: yellow;
-    color: white;
-  }
-  
-  .pokemon-details {
-    background-color: #ffffff;
-    border-radius: 10px;
-    padding: 20px;
-    color: black;
-  }
-  
-  .pokemon-details img {
-    width: 200px;
-    height: 200px;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .pokemon-details .shiny-button{
-    display: flex;
-    background-color: gold;
-    color: black;
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    cursor: pointer;
-    padding: 5px 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -10px;
-    margin-bottom: 10px;
-  }
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-  .shiny-button:hover{
-    background-color: orange;
-  }
-  
-  .pokemon-details h2 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-  }
-  
-  .pokemon-details p {
-    margin: 5px 0;
-  }
-  
-  .evolution-title {
-    margin-top: 30px;
-  }
-  .evolution-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .evolution-stage {
-    text-align: center;
-  }
-  
-  .evolution-stage img {
-    width: 100px;
-    height: 100px;
-  }
-  
-  .evolution-stage p {
-    font-size: 1.1em;
-  }
+.pokedex-container {
+  background-color: #d32f2f;
+  width: 400px;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
+  overflow: hidden;
+}
 
-  /* .shiny-button{
+.title {
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.search-bar {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+#pokemonName {
+  width: 70%;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+}
+
+#search-button {
+  padding: 10px;
+  border: none;
+  background-color: teal;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+#search-button:hover {
+  background-color: darkgreen;
+  color: white;
+}
+
+#random-button {
+  padding: 10px;
+  border: none;
+  background-color: orange;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+#random-button:hover {
+  background-color: yellow;
+  color: white;
+}
+
+#favorite-button {
+  padding: 10px;
+  border: none;
+  background-color: pink;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+#favorite-button:hover {
+  background-color: white;
+}
+
+.pokemon-details {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 20px;
+  color: black;
+  height: 100%;
+  overflow-y: auto;
+  max-height: calc(90vh - 170px);
+}
+
+.pokemon-details img {
+  width: 200px;
+  height: 200px;
+}
+
+.pokemon-details .shiny-button {
+  display: flex;
+  background-color: gold;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 5px 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
+
+.shiny-button:hover {
+  background-color: orange;
+}
+
+.pokemon-details h2 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.pokemon-details p {
+  margin: 5px 0;
+}
+
+.evolution-title {
+  margin-top: 30px;
+}
+.evolution-container {
+  display: flex;
+  justify-content: center;
+}
+
+.evolution-stage {
+  text-align: center;
+}
+
+.evolution-stage img {
+  width: 100px;
+  height: 100px;
+}
+
+.evolution-stage p {
+  font-size: 1.1em;
+}
+
+.favoritePokemon{
+display:flex;
+align-items: center;
+gap: 10px;
+margin: 10px 0;
+}
+
+/* .shiny-button{
     background-color: gold;
     color: black;
     border: none;
